2023-01-18 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h: Include new framesize field
	of jit_compiler_t; add new alist field for jit_function_t; add
	new cvt_offset and need_stack fields specific to x86.
	* lib/jit_x86.c, lib/jit_x86-cpu: Rewrite code to create stack
	frames, so that less stack space can be used if no, or very few
	callee save registers are modified in a function.
	* jit_x86-sse.c, jit_x86-x87.c: Make CVT_OFFSET variable, and
	dynamically allocated; this is required to avoid needing to
	modify twice %rsp at function prologs, even if no stack space
	is used.

2022-11-09 Paulo Andrade <pcpa@gnu.org>

	* configure.ac: Add new --enable-devel-strong-type-checking
	option.
	* include/lightning.h.in: Rework to not need to know if
	PACKED_STACK is defined, and add a new argument to _jit_arg,
	_jit_putarg{r,i}, _jit_pusharg{r,i} and _jit_ret{r,i} to have
	the same code path if PACKED_STACK is defined or not, and also
	to implement STRONG_TYPE_CHECK enabled with the new
	--enable-devel-strong-type-checking.
	* include/lightning/jit_private.h: Add new macros to add assertions
	for STRONG_TYPE_CHECK and avoid pasting tokens in jit_inc_synth*
	when the token is not a static known value.
	* lib/jit_aarch64.c: The first implementation of the new code,
	working correctly in Apple M1 and with and without STRONG_TYPE_CHECK
	in Linux.

2022-11-08 Paulo Andrade <pcpa@gnu.org>

	Add support for packed stack arguments as used by Apple M1
	aarch64 cpus. This requires a major redesign in how Lightning
	works, because contrary to all other supported ports, in this
	case arguments must be truncated and sign/zero extended if
	passed in registers, but when receiving the argument, there
	is no need to truncate and sign/zero extend.
	Return values are also treated this way. The callee must
	truncate sign/zero extend, not the caller.
	check/Makefile.am: Add LIGHTNING_CFLAGS to AM_CFLAGS.
	check/all.tst: Implement paired arg/getarg/pusharg/putarg/ret